fix style issue with header wrapping at smaller screen sizes

--- a/modules/ui/components/Game/styles.css
+++ b/modules/ui/components/Game/styles.css
@@ -33,7 +33,7 @@
 .header {
   height: 70px;
   padding: 10px;
-  width: 80%;
+  width: 95%;
   display: flex;
   justify-content: space-between;
 }
